Use Integer|Double.valueof()
Change-Id: Idba9d882c9fd1cf22b7a336e3d6920db09ae1647
Signed-off-by: John May <john.wilkinsonmay@gmail.com>